clang/test/BSC/Negative/Trait/r3/define_func_in_trait/define_func_in_trait.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F {
  int foo(This* this, int a) { // expected-error {{expected member name or ';' after declaration specifiers}} 
    return 0;
  }
};